spring-data-jpa/src/main/java/ru/sabitov/example/error/BookEventSerializationException.java
package ru.sabitov.example.error;

public class BookEventSerializationException extends RuntimeException {
    public BookEventSerializationException(String message) {
        super(message);
    }
}
